--- a/four-card-feature-section-master/User Files/four-card-feature-final.html
+++ b/four-card-feature-section-master/User Files/four-card-feature-final.html
@@ -23,24 +23,25 @@
                 <div class="card" id="supervisor">
                     <p class="card-headings">Supervisor</p>
                     <p class="card-descriptions">Monitors actively to identify project roadblocks.</p>
-                    <img src="file:///Users/jordan/Documents/Frontend Mentor Exercises/four-card-feature-section-master/images/icon-supervisor.svg" alt="eye-magnifying-glass" class="logos">
+                    <img src="https://i.ibb.co/JxPB70g/icon-supervisor.png" alt="eye-magnifying-glass" class="logos">
                 </div>
                 <div class="card" id="team-builder">
                     <p class="card-headings">Team Builder</p>
                     <p class="card-descriptions">Scans our talent network to create the optimal team for your project.</p>
-                    <img src="file:///Users/jordan/Documents/Frontend Mentor Exercises/four-card-feature-section-master/images/icon-team-builder.svg" alt="house">
+                    <img src="https://i.ibb.co/b6F5w0d/icon-team-builder.png" alt="house">
                 </div>
                 <div class="card" id="karma">
                     <p class="card-headings">Karma</p>
                     <p class="card-descriptions">Regularly evaluates our talent to ensure quality.</p>
-                    <img src="file:///Users/jordan/Documents/Frontend Mentor Exercises/four-card-feature-section-master/images/icon-karma.svg" alt="house">
+                    <img src="https://i.ibb.co/8Mm907K/icon-karma.png" alt="house">
                 </div>
                 <div class="card" id="calculator">
                     <p class="card-headings">Calculator</p>
                     <p class="card-descriptions">Uses data from past projects to provide better estimates</p>
-                    <img src="file:///Users/jordan/Documents/Frontend Mentor Exercises/four-card-feature-section-master/images/icon-calculator.svg" alt="house">
+                    <img src="https://i.ibb.co/RSwVBXP/icon-calculator.png" alt="house">
                 </div>
             </section>
 </div>
 </body>
 </html>
+
