First Commit After Critiques

--- a/four-card-feature-section-master/User Files/four-card-feature-final.html
+++ b/four-card-feature-section-master/User Files/four-card-feature-final.html
@@ -10,37 +10,38 @@
 </head>
 <body>
 <div class="box">
-        <section class="intro">
-                <div>
-                    <h1 id="title">Reliable, efficient delivery</h2>
-                    <h2 id="subtitle">Powered By Technology</h2>
-                    <p class="card-descriptions">Our artificial intelligence powered tools use millions of project data points to 
-                                ensure that your project is successful.
-                    </p>
-                </div>   
-            </section>
-            <section class="container">
-                <div class="card" id="supervisor">
-                    <p class="card-headings">Supervisor</p>
-                    <p class="card-descriptions">Monitors actively to identify project roadblocks.</p>
-                    <img src="https://i.ibb.co/JxPB70g/icon-supervisor.png" alt="eye-magnifying-glass" class="logos">
-                </div>
-                <div class="card" id="team-builder">
-                    <p class="card-headings">Team Builder</p>
-                    <p class="card-descriptions">Scans our talent network to create the optimal team for your project.</p>
-                    <img src="https://i.ibb.co/b6F5w0d/icon-team-builder.png" alt="house">
-                </div>
-                <div class="card" id="karma">
-                    <p class="card-headings">Karma</p>
-                    <p class="card-descriptions">Regularly evaluates our talent to ensure quality.</p>
-                    <img src="https://i.ibb.co/8Mm907K/icon-karma.png" alt="house">
-                </div>
-                <div class="card" id="calculator">
-                    <p class="card-headings">Calculator</p>
-                    <p class="card-descriptions">Uses data from past projects to provide better estimates</p>
-                    <img src="https://i.ibb.co/RSwVBXP/icon-calculator.png" alt="house">
-                </div>
-            </section>
+        <header>
+            <div>
+                <h1 id="title">Reliable, efficient delivery
+                <span>Powered By Technology</span></h1>
+                <p class="card-descriptions">Our artificial intelligence powered tools use millions of project data points to 
+                            ensure that your project is successful.
+                </p>
+            </div>
+        </header>   
+         <main>
+            <div class="card" id="supervisor">
+                <p class="card-headings">Supervisor</p>
+                <p class="card-descriptions">Monitors actively to identify project roadblocks.</p>
+                <img src="https://i.ibb.co/JxPB70g/icon-supervisor.png" alt="eye-magnifying-glass" class="logos">
+            </div>
+            <div class="card" id="team-builder">
+                <p class="card-headings">Team Builder</p>
+                <p class="card-descriptions">Scans our talent network to create the optimal team for your project.</p>
+                <img src="https://i.ibb.co/b6F5w0d/icon-team-builder.png" alt="house">
+            </div>
+            <div class="card" id="karma">
+                <p class="card-headings">Karma</p>
+                <p class="card-descriptions">Regularly evaluates our talent to ensure quality.</p>
+                <img src="https://i.ibb.co/8Mm907K/icon-karma.png" alt="house">
+            </div>
+            <div class="card" id="calculator">
+                <p class="card-headings">Calculator</p>
+                <p class="card-descriptions">Uses data from past projects to provide better estimates</p>
+                <img src="https://i.ibb.co/RSwVBXP/icon-calculator.png" alt="house">
+            </div>
+         </main>  
+            
 </div>
 </body>
 </html>
