--- a/four-card-feature-section-master/User Files/four-card-feature-final.html
+++ b/four-card-feature-section-master/User Files/four-card-feature-final.html
@@ -13,7 +13,7 @@
         <header>
             <div>
                 <h1 id="title">Reliable, efficient delivery
-                <span>Powered By Technology</span></h1>
+                <br><span>Powered By Technology</span></h1>
                 <p class="card-descriptions">Our artificial intelligence powered tools use millions of project data points to 
                             ensure that your project is successful.
                 </p>
